// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeView should render items with icon 1`] = `
<li
  className="tc-treeview-item-li theme-tc-treeview-li"
  data-hidden={undefined}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="tc-treeview-item theme-tc-treeview-item"
    data-selected={undefined}
    id="tc-treeview-item"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    style={
      Object {
        "paddingLeft": "30px",
      }
    }
    tabIndex="0"
  >
    true
    <TreeViewIcon
      icon={
        Object {
          "name": "src-http://static.pokemonpets.com/images/monsters-images-300-300/106-Hitmonlee.png",
          "title": "A pokemon",
        }
      }
      toggled={false}
    />
    <span
      className="tc-treeview-item-name"
    >
      grandpa
    </span>
    <div
      className="theme-tc-treeview-item-ctrl"
    >
      <Translate(Badge)
        label="101"
      />
      <Action
        hideLabel={true}
        icon="talend-trash"
        id="tc-treeview-item-talend-trash"
        label="remove element"
        link={true}
        onClick={[Function]}
        tooltipPlacement="right"
      />
    </div>
  </div>
  <ul
    className="theme-tc-treeview-ul"
  >
    
  </ul>
</li>
`;

exports[`TreeView should render normally with all buttons and custom labels 1`] = `
<li
  className="tc-treeview-item-li theme-tc-treeview-li"
  data-hidden={undefined}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="tc-treeview-item theme-tc-treeview-item"
    data-selected={undefined}
    id="tc-treeview-item"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    style={
      Object {
        "paddingLeft": "30px",
      }
    }
    tabIndex="0"
  >
    <Icon
      className="theme-tc-treeview-toggle"
      name="talend-caret-down"
      title="Collapse"
      transform={undefined}
    />
    <TreeViewIcon
      icon={undefined}
      toggled={true}
    />
    <span
      className="tc-treeview-item-name"
    >
      grandpa
    </span>
    <div
      className="theme-tc-treeview-item-ctrl"
    >
      <Translate(Badge)
        label="101"
      />
      <Action
        hideLabel={true}
        icon="talend-trash"
        id="tc-treeview-item-talend-trash"
        label="remove element"
        link={true}
        onClick={[Function]}
        tooltipPlacement="right"
      />
    </div>
  </div>
  <ul
    className="theme-tc-treeview-ul"
  >
    <TreeViewItem
      depth={1}
      id="tc-treeview-item-0"
      item={
        Object {
          "children": Array [
            Object {
              "name": "me",
              "selected": true,
            },
            Object {
              "name": "bro",
            },
          ],
          "name": "mami",
          "toggled": true,
        }
      }
      onClick={[Function]}
      onSelect={[Function]}
    />
    <TreeViewItem
      depth={1}
      id="tc-treeview-item-1"
      item={
        Object {
          "children": Array [
            Object {
              "name": "cousin",
            },
          ],
          "name": "aunt",
          "toggled": false,
        }
      }
      onClick={[Function]}
      onSelect={[Function]}
    />
  </ul>
</li>
`;
